# site

./: CNAME  Cargo.toml  Dioxus.toml  input.css  package-lock.json  tailwind.config.js
docs/: 404.html  CNAME  index.html  tailwind.css  tailwind.css.br
docs/assets/dioxus/: Tailwind CSS + Dioxus.js  Tailwind CSS + Dioxus.js.br  Tailwind CSS + Dioxus_bg.wasm  Tailwind CSS + Dioxus_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-dce332548ff09d6f/: inline0.js  inline0.js.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-dce332548ff09d6f/src/: common.js.br
docs/blog/prism/: prism.css
docs/prism/: prism.css.br
pages/: bevy.md  page.md  rhythm-games-with-speakers.md  self_introduction.md
public/: tailwind.css
src/: main.rs
src/blog/: blog.rs
